feat: bump 0.9.5-beta1

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "open-webui-lite-desktop"
-version = "0.9.4"
+version = "0.9.5-beta1"
 description = "Open WebUI Lite Desktop Application"
 authors = ["xxnuo"]
 edition = "2021"
