--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,6 @@ tauri-plugin-shell = "2.3.1"
 tauri-plugin-http = "2.5.2"
 tauri-plugin-websocket = "2"
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
+
