--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -181,6 +181,8 @@ jobs:
           PKG_CONFIG_ALLOW_CROSS: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '1' || '' }}
           PKG_CONFIG_PATH: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '/usr/lib/aarch64-linux-gnu/pkgconfig' || '' }}
           CARGO_PROFILE_RELEASE_LTO: thin
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
           cd src-tauri
           cargo fetch --target ${{ matrix.target }}
@@ -191,6 +193,8 @@ jobs:
         if: runner.os == 'Windows'
         env:
           CARGO_PROFILE_RELEASE_LTO: thin
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
           cd src-tauri
           cargo fetch --target ${{ matrix.target }}
