--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "open-webui-lite-desktop"
-version = "0.9.5"
-description = "Open WebUI Lite Desktop Application"
+name = "open-coreui-desktop"
+version = "0.9.6"
+description = "Open CoreUI Desktop Application"
 authors = ["xxnuo"]
 edition = "2021"
 
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "open_webui_lite_desktop_lib"
+name = "open_coreui_desktop_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
