--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,19 @@ name: Build and Release
 on:
   workflow_dispatch:
   push:
-    # branches:
-    #   - main
-    # paths-ignore:
-    #   - "**.md"
-    #   - "docs/**"
+    branches:
+      - main
     tags:
       - "v*"
+    paths:
+      - "backend/rust-backend/**"
+      - "backend/svelte-frontend/**"
+      - "src-tauri/**"
+      - ".github/workflows/build.yml"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   CARGO_TERM_COLOR: always
@@ -206,10 +212,10 @@ jobs:
         run: |
           # Install makepkg dependencies
           sudo apt-get install -y binutils fakeroot
-          
+
           # Build Arch package
           make build-arch-pkg
-          
+
           # Move to artifacts location
           mkdir -p arch-pkg
           mv *.pkg.tar.zst arch-pkg/ || true
@@ -223,9 +229,11 @@ jobs:
             bin/open-coreui-${{ matrix.target }}*
             arch-pkg/*.pkg.tar.zst
           if-no-files-found: error
+          retention-days: ${{ startsWith(github.ref, 'refs/tags/v') && 90 || 30 }}
 
   release:
     needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -242,7 +250,7 @@ jobs:
       - name: Organize Release Assets
         run: |
           mkdir -p release-assets
-          
+
           VERSION=$(cat src-tauri/tauri.conf.json | grep '"version"' | head -1 | sed 's/.*"version": "\(.*\)".*/\1/')
 
           # Copy desktop app packages (only the final installer packages)
