--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,13 +210,15 @@ jobs:
       - name: Build Arch Linux Package
         if: runner.os == 'Linux'
         run: |
-          # Install makepkg dependencies
-          sudo apt-get install -y binutils fakeroot
+          ARCH="${{ matrix.target == 'aarch64-unknown-linux-gnu' && 'aarch64' || 'x86_64' }}"
+          
+          docker run --rm -v $PWD:/workspace -w /workspace archlinux:latest bash -c "
+            pacman -Sy --noconfirm base-devel fakeroot &&
+            useradd -m builder &&
+            chown -R builder:builder /workspace &&
+            su builder -c 'CARCH=${ARCH} makepkg -f'
+          "
 
-          # Build Arch package
-          make build-arch-pkg
-
-          # Move to artifacts location
           mkdir -p arch-pkg
           mv *.pkg.tar.zst arch-pkg/ || true
 
