--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,17 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cache Bun Dependencies
+        if: steps.cache-frontend.outputs.cache-hit != 'true'
+        uses: actions/cache@v4
+        with:
+          path: |
+            frontend/node_modules
+            ~/.bun/install/cache
+          key: bun-${{ runner.os }}-${{ hashFiles('frontend/bun.lock') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
+
       - name: Build Frontend
         if: steps.cache-frontend.outputs.cache-hit != 'true'
         run: make build-frontend
@@ -94,6 +105,16 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cache Bun Dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            src-tauri/node_modules
+            ~/.bun/install/cache
+          key: bun-tauri-${{ runner.os }}-${{ hashFiles('src-tauri/bun.lock') }}
+          restore-keys: |
+            bun-tauri-${{ runner.os }}-
+
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
@@ -108,6 +129,7 @@ jobs:
             './src-tauri -> target'
           key: ${{ matrix.target }}
           cache-all-crates: true
+          shared-key: "rust-build"
           save-if: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Cache Tauri CLI
@@ -115,7 +137,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cargo/bin/cargo-tauri
-          key: tauri-cli-2.0.0-${{ runner.os }}-${{ matrix.target }}
+          key: tauri-cli-2.0.0-${{ runner.os }}
 
       - name: Install Tauri CLI
         if: steps.cache-tauri-cli.outputs.cache-hit != 'true'
@@ -159,6 +181,7 @@ jobs:
           PKG_CONFIG_ALLOW_CROSS: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '1' || '' }}
           PKG_CONFIG_PATH: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '/usr/lib/aarch64-linux-gnu/pkgconfig' || '' }}
           CARGO_PROFILE_RELEASE_LTO: thin
+          CARGO_INCREMENTAL: 1
         run: |
           mkdir -p bin
           cd backend
@@ -170,6 +193,7 @@ jobs:
         if: runner.os == 'Windows'
         env:
           CARGO_PROFILE_RELEASE_LTO: thin
+          CARGO_INCREMENTAL: 1
         run: |
           mkdir bin
           cd backend
@@ -187,6 +211,7 @@ jobs:
           PKG_CONFIG_ALLOW_CROSS: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '1' || '' }}
           PKG_CONFIG_PATH: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && '/usr/lib/aarch64-linux-gnu/pkgconfig' || '' }}
           CARGO_PROFILE_RELEASE_LTO: thin
+          CARGO_INCREMENTAL: 1
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
@@ -199,6 +224,7 @@ jobs:
         if: runner.os == 'Windows'
         env:
           CARGO_PROFILE_RELEASE_LTO: thin
+          CARGO_INCREMENTAL: 1
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: |
@@ -206,6 +232,25 @@ jobs:
           cargo fetch --target ${{ matrix.target }}
           cd ..
           cargo tauri build --target ${{ matrix.target }}
+
+      - name: Cache Docker Image
+        if: runner.os == 'Linux'
+        uses: actions/cache@v4
+        with:
+          path: /tmp/archlinux-docker.tar
+          key: archlinux-docker-${{ hashFiles('.github/workflows/build.yml') }}
+          restore-keys: |
+            archlinux-docker-
+
+      - name: Load or Pull Docker Image
+        if: runner.os == 'Linux'
+        run: |
+          if [ -f /tmp/archlinux-docker.tar ]; then
+            docker load -i /tmp/archlinux-docker.tar
+          else
+            docker pull archlinux:latest
+            docker save archlinux:latest -o /tmp/archlinux-docker.tar
+          fi
 
       - name: Build Arch Linux Package
         if: runner.os == 'Linux'
