--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
         if: steps.cache-tauri-cli.outputs.cache-hit != 'true'
         env:
           RUSTC_WRAPPER: ""
-        run: cargo install tauri-cli --version "^2.0.0" --locked
+        run: cargo install tauri-cli --version "^2.0.0" --locked --force
 
       - name: Download Frontend Build
         uses: actions/download-artifact@v6
